<resources>
    <string name="app_name">FirstDegree</string>
    <string name="title_app">First Degree</string>
    <string name="title_coefficient_a">Coefficient a:</string>
    <string name="title_coefficient_b">Coefficient b:</string>
    <string name="title_solution">Solution</string>
    <string name="title_next">Next</string>
    <string name="title_exit">Exit</string>
    <string name="title_result">Result:</string>
    <string name="title_infinity">Infinity!</string>
    <string name="title_no_solution">No Solution!</string>
    <string name="title_change_language">Change Language</string>
    <string name="title_select_language">Select Language</string>
    <string name="title_confirm_language_change">Confirm Language Change</string>
    <string name="title_confirm_language_change_message">Are you sure you want to change the language to %1$s?</string>
</resources>